Research with more explaination

--- a/research/pump_level_cm_to_m3.ipynb
+++ b/research/pump_level_cm_to_m3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,26 +12,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_cm_to_m3(pump):\n",
+    "    \"\"\"\n",
+    "    Gets the difference of inflow and outflow and see how much cm the pump rises or falls in level\n",
+    "    Then creates a table for each 'normal' water level (meaning with a low zscore) were one can read \n",
+    "    of as when level goes from {index} cm to {column} cm pump difference in m^3 \n",
+    "    \"\"\"\n",
     "    inflow_df = pd.read_csv(f\"../processed/pump_in_flow_appr_{pump}.csv\")\n",
+    "    # Calculate the difference in pump water volume     \n",
     "    inflow_df['in_minus_out'] = abs(inflow_df['flow_in'] - inflow_df['hstWaarde'])\n",
     "    inflow_df['level'] = inflow_df.iloc[:,1].round()\n",
     "    inflow_df['prev_level'] = inflow_df['level'].shift(1)\n",
-    "\n",
+    "    \n",
+    "    # Calculating the 'normal' pump level range     \n",
     "    min_max_df = inflow_df.copy()\n",
     "    min_max_df['zscore'] = abs((min_max_df['level'] - min_max_df['level'].mean())/min_max_df['level'].std(ddof=0))\n",
     "    min_max_df = min_max_df[min_max_df['zscore'] < 1.5]\n",
     "    max_level = min_max_df['level'].max()\n",
     "    min_level = min_max_df['level'].min()\n",
     "    small_df = inflow_df.loc[(inflow_df['level'] < max_level) & (inflow_df['level'] > min_level)]\n",
+    "    \n",
+    "    # And creating a n x m dataframe for the data     \n",
     "    indexes = np.array(small_df['level'].min() + np.arange(small_df['level'].max() - small_df['level'].min()))\n",
     "    columns = np.array(small_df['level'].min() + np.arange(small_df['level'].max() - small_df['level'].min()))\n",
     "    df = pd.DataFrame(0, index=indexes, columns=columns)\n",
     "    \n",
+    "    # We fill this dataframe with the mean of all corresponding data belonging to every single cell     \n",
     "    for i in range(len(indexes)):\n",
     "        index = indexes[i]\n",
     "        print(index)\n",
@@ -49,23 +59,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'calculate_cm_to_m3' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-131-f49e7389c49d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpumps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Engelerschans'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Maaspoort'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Rompert'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Oude Engelenseweg'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mpump\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpumps\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mpump_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_cm_to_m3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpump\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mpump_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"../processed/{pump}_cm_m3.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'calculate_cm_to_m3' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.0\n",
+      "73.0\n",
+      "74.0\n",
+      "75.0\n",
+      "76.0\n",
+      "77.0\n",
+      "78.0\n",
+      "79.0\n",
+      "80.0\n",
+      "81.0\n",
+      "82.0\n",
+      "83.0\n",
+      "84.0\n",
+      "85.0\n",
+      "86.0\n",
+      "87.0\n",
+      "88.0\n",
+      "89.0\n",
+      "90.0\n",
+      "91.0\n",
+      "92.0\n",
+      "93.0\n",
+      "94.0\n",
+      "95.0\n",
+      "96.0\n",
+      "97.0\n",
+      "98.0\n",
+      "99.0\n",
+      "100.0\n",
+      "101.0\n",
+      "102.0\n",
+      "103.0\n",
+      "104.0\n",
+      "105.0\n",
+      "106.0\n",
+      "107.0\n",
+      "108.0\n",
+      "109.0\n",
+      "110.0\n",
+      "111.0\n",
+      "112.0\n",
+      "113.0\n",
+      "114.0\n",
+      "115.0\n",
+      "116.0\n",
+      "117.0\n",
+      "118.0\n",
+      "119.0\n",
+      "120.0\n",
+      "121.0\n",
+      "122.0\n",
+      "123.0\n",
+      "124.0\n",
+      "125.0\n",
+      "126.0\n",
+      "127.0\n",
+      "128.0\n",
+      "129.0\n",
+      "130.0\n",
+      "131.0\n",
+      "132.0\n",
+      "133.0\n",
+      "134.0\n",
+      "135.0\n",
+      "136.0\n",
+      "137.0\n",
+      "138.0\n",
+      "139.0\n",
+      "140.0\n",
+      "141.0\n",
+      "142.0\n",
+      "143.0\n",
+      "144.0\n",
+      "145.0\n",
+      "146.0\n",
+      "147.0\n",
+      "148.0\n",
+      "149.0\n",
+      "150.0\n",
+      "151.0\n",
+      "152.0\n",
+      "153.0\n",
+      "154.0\n",
+      "155.0\n",
+      "156.0\n",
+      "157.0\n",
+      "158.0\n",
+      "159.0\n",
+      "160.0\n",
+      "161.0\n",
+      "162.0\n",
+      "163.0\n",
+      "164.0\n",
+      "165.0\n",
+      "166.0\n",
+      "167.0\n",
+      "168.0\n",
+      "169.0\n",
+      "170.0\n",
+      "171.0\n",
+      "172.0\n",
+      "173.0\n",
+      "174.0\n",
+      "175.0\n",
+      "176.0\n",
+      "177.0\n",
+      "178.0\n",
+      "179.0\n",
+      "180.0\n",
+      "181.0\n",
+      "182.0\n",
+      "183.0\n",
+      "184.0\n",
+      "185.0\n",
+      "186.0\n",
+      "187.0\n",
+      "188.0\n",
+      "189.0\n",
+      "190.0\n",
+      "191.0\n",
+      "192.0\n",
+      "193.0\n",
+      "194.0\n",
+      "195.0\n",
+      "196.0\n",
+      "Pump done\n",
+      "73.0\n",
+      "74.0\n",
+      "75.0\n",
+      "76.0\n",
+      "77.0\n",
+      "78.0\n",
+      "79.0\n",
+      "80.0\n",
+      "81.0\n",
+      "82.0\n",
+      "83.0\n",
+      "84.0\n",
+      "85.0\n",
+      "86.0\n",
+      "87.0\n",
+      "88.0\n",
+      "89.0\n",
+      "90.0\n",
+      "91.0\n",
+      "92.0\n",
+      "93.0\n",
+      "94.0\n",
+      "95.0\n",
+      "96.0\n",
+      "97.0\n",
+      "98.0\n",
+      "99.0\n",
+      "100.0\n",
+      "101.0\n",
+      "102.0\n",
+      "103.0\n",
+      "104.0\n",
+      "105.0\n",
+      "106.0\n",
+      "107.0\n",
+      "108.0\n",
+      "109.0\n",
+      "110.0\n",
+      "111.0\n",
+      "112.0\n",
+      "113.0\n",
+      "114.0\n",
+      "115.0\n",
+      "116.0\n",
+      "117.0\n",
+      "118.0\n",
+      "119.0\n",
+      "120.0\n",
+      "121.0\n",
+      "122.0\n",
+      "123.0\n",
+      "124.0\n",
+      "125.0\n",
+      "126.0\n"
      ]
     }
    ],
    "source": [
-    "pumps = ['Engelerschans', 'Maaspoort', 'Rompert', 'Oude Engelenseweg']\n",
+    "pumps = ['Engelerschans', 'Maaspoort', 'Rompert', 'Oude Engelenseweg', 'Helftheuvel']\n",
     "for pump in pumps:\n",
     "    pump_df = calculate_cm_to_m3(pump)\n",
     "    pump_df.to_csv(f\"../processed/{pump}_cm_m3.csv\")"
@@ -90,6 +275,11 @@
    "outputs": [],
    "source": [
     "def to_one_cm_diff_only(df):\n",
+    "    \"\"\"\n",
+    "    To convert the big dataframe generated above to be only per cm by cycling\n",
+    "    over every cell and dividing it by the amount of cm difference to get a 'mean' over the cm's difference \n",
+    "    keeping out data when there is more than 30 cm difference\n",
+    "    \"\"\"\n",
     "    for index in df.columns:\n",
     "        index = float(index)\n",
     "        for column in df.columns:\n",
@@ -181,28 +371,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0    12864.000000\n",
-       "0             15963.226862\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.rolling(window=30).mean().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
    "outputs": [
@@ -231,123 +399,6 @@
    ],
    "source": [
     "df.cumsum().plot(None, [1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>72.0</td>\n",
-       "      <td>170.704970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>73.0</td>\n",
-       "      <td>143.748292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>74.0</td>\n",
-       "      <td>151.434029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>75.0</td>\n",
-       "      <td>123.815465</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>76.0</td>\n",
-       "      <td>100.158551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>192.0</td>\n",
-       "      <td>189.639735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>193.0</td>\n",
-       "      <td>116.242869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>194.0</td>\n",
-       "      <td>181.214133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>195.0</td>\n",
-       "      <td>252.742860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>196.0</td>\n",
-       "      <td>205.438942</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>125 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0           0\n",
-       "0          72.0  170.704970\n",
-       "1          73.0  143.748292\n",
-       "2          74.0  151.434029\n",
-       "3          75.0  123.815465\n",
-       "4          76.0  100.158551\n",
-       "..          ...         ...\n",
-       "120       192.0  189.639735\n",
-       "121       193.0  116.242869\n",
-       "122       194.0  181.214133\n",
-       "123       195.0  252.742860\n",
-       "124       196.0  205.438942\n",
-       "\n",
-       "[125 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
