--- a/research/pump_in_flow.ipynb
+++ b/research/pump_in_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
+    "# Wouters functions, see git for more explaination \n",
     "# create full level csv\n",
     "path = '../processed/'\n",
     "full_level = pd.read_csv('../processed/full_level.csv')\n",
     "\n",
-    "\n",
     "# Function to select all level data from one pump\n",
-    "def get_pump_level(pump: str, sample_time='1h')->pd.DataFrame:\n",
+    "def get_pump_level(pump: str, sample_time='1T')->pd.DataFrame:\n",
     "    \"\"\"Creates a dataframe with all level data for one pump\"\"\"\n",
     "\n",
     "    pump_level = full_level.loc[:, full_level.columns.str.contains(f'{str(pump)}|Tijd|Datum')]\n",
@@ -33,7 +33,7 @@
     "\n",
     "\n",
     "# function to get all flow data from one pump\n",
-    "def get_flow_data(pump: str, sample_time='1h')->pd.DataFrame:\n",
+    "def get_flow_data(pump: str, sample_time='1T')->pd.DataFrame:\n",
     "    \"\"\"Creates data frame with all flow data for one pump\"\"\"\n",
     "    files = os.listdir(path)\n",
     "    \n",
@@ -54,7 +54,7 @@
     "\n",
     "\n",
     "\n",
-    "def pump_flow_level(pump: str, sample_time='1h'):\n",
+    "def pump_flow_level(pump: str, sample_time='1T'):\n",
     "    \"\"\"\"Combines both level and flow dataframes to one dataframe\"\"\"\n",
     "    \n",
     "    dct = {'Helftheuvel': ['003', '301'], 'Engelerschans': ['004', 'FIT201'], 'Maaspoort': ['006', '501'],\n",
@@ -67,18 +67,18 @@
     "    df_flow = get_flow_data(dct[pump][1], sample_time)\n",
     "    \n",
     "    df_flow_level = pd.merge(df_level, df_flow, how='inner', left_index=True, right_index=True)\n",
-    "    return df_flow_level"
+    "    return df_flow_level\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_in_flow_approximation(pump: str, sample_time=\"1T\"):\n",
     "    \"\"\"\n",
-    "    Calculates the cycle length and sums the outflow in one cycle to finally devide it by the length, \n",
+    "    Calculates the cycle length and sums the outflow in one cycle to finally devide it by the length of the cycle, \n",
     "    giving the average over the cycle, then smoothening it with 100 rolling\n",
     "    \"\"\"\n",
     "    \n",
@@ -86,25 +86,32 @@
     "    \n",
     "    df_concat = df_pump.copy()\n",
     "    df_concat = df_concat.fillna(method='pad')\n",
-    "\n",
+    "    \n",
+    "    # Pump cycle start is to keep track of when the pump turns on at the start of a new cycle    \n",
     "    df_concat['pump_cycle_start'] = False\n",
     "    df_concat['next_hstWaarde'] = df_concat['hstWaarde'].shift(-1)\n",
-    "\n",
+    "    \n",
+    "    # Removing datapoints where the pump overflows by removing any slight outliers\n",
+    "    # Then selecting the max of these datapoints     \n",
     "    df_test = df_concat.copy()\n",
     "    df_test['zscore'] = abs((df_test['hstWaarde'] - df_test['hstWaarde'].mean())/df_test['hstWaarde'].std(ddof=0))\n",
     "    df_test = df_test[df_test['zscore'] < 1.65]\n",
     "    overflow_amount = int(round(df_test['hstWaarde'].max()))\n",
-    "\n",
+    "    \n",
+    "    # When the hstWaarde is almost nothing and the next hstWaarde grows higher, we say we begin at a new pump cycle\n",
+    "    # Or when the pumps hstWaarde shows signs of overflowing we see every datapoint as a new pump cycle     \n",
     "    df_concat.loc[((df_concat['hstWaarde'] < 5) & \n",
     "                   (df_concat['next_hstWaarde'] > 5)) | \n",
-    "                  ((df_concat['hstWaarde'] > 1608) & \n",
+    "                  ((df_concat['hstWaarde'] > overflow_amount) & \n",
     "                   (df_concat['next_hstWaarde'] > df_concat['hstWaarde'])), 'pump_cycle_start'] = True\n",
     "    df_concat['just_turned_on_debug'] = np.nan\n",
     "    df_concat.loc[df_concat['pump_cycle_start'] == True, 'just_turned_on_debug'] = df_concat['hstWaarde']\n",
-    "\n",
+    "    \n",
+    "    # Sum of hstWaarde to eventually divide the difference of one pump cycle by the amount of datapoints in the cycle      \n",
     "    df_concat['hstWaarde_sum'] = df_concat['hstWaarde'].cumsum()\n",
     "    df_concat['prev_hstWaarde_sum'] = np.nan\n",
-    "\n",
+    "    \n",
+    "    # Forward fill the hstWaarde sum to make the data available at the beginning of the new cycle to calculate the mean      \n",
     "    df_concat.loc[df_concat['pump_cycle_start'] == True, 'prev_hstWaarde_sum'] = df_concat['hstWaarde_sum'] \n",
     "    df_concat['prev_hstWaarde_sum'] = df_concat['prev_hstWaarde_sum'].ffill()\n",
     "    df_concat['prev_hstWaarde_sum'] = df_concat['prev_hstWaarde_sum'].shift(1)\n",
@@ -114,10 +121,13 @@
     "    df_concat.loc[df_concat['pump_cycle_start'] == True, 'prev_counter'] = df_concat['counter'] \n",
     "    df_concat['prev_counter'] = df_concat['prev_counter'].ffill()\n",
     "    df_concat['prev_counter'] = df_concat['prev_counter'].shift(1)\n",
-    "\n",
+    "    \n",
+    "    # Finally calculating the flow mean of one cycle     \n",
     "    df_concat['cycle_flow_mean'] = np.nan\n",
     "    df_concat.loc[df_concat['pump_cycle_start'] == True, 'cycle_flow_mean'] = (df_concat['hstWaarde_sum'] - df_concat['prev_hstWaarde_sum'])/(df_concat['counter'] - df_concat['prev_counter'])\n",
     "    df_concat['cycle_flow_mean'] = df_concat['cycle_flow_mean'].ffill()\n",
+    "    \n",
+    "    # And smoothening it so it isn't as blocky     \n",
     "    df_concat['SMA_cycle_flow'] = df_concat.loc[:,'cycle_flow_mean'].rolling(window=100).mean().shift(-100)\n",
     "    \n",
     "    df_pump['flow_in'] = df_concat['SMA_cycle_flow']\n",
@@ -126,15 +136,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-edc091deec70>:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pump_level['date+time'] = pump_level['Datum'] + ' ' + pump_level['Tijd']\n",
+      "<ipython-input-1-edc091deec70>:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pump_level['date+time'] = pd.to_datetime(pump_level['date+time'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pump level done\n",
+      "flow data done\n",
+      "pump level done\n",
+      "flow data done\n",
+      "pump level done\n",
+      "flow data done\n",
+      "pump level done\n",
+      "flow data done\n",
+      "pump level done\n",
+      "flow data done\n"
+     ]
+    }
+   ],
    "source": [
     "pumps = ['Helftheuvel', 'Engelerschans', 'Maaspoort', 'Rompert', 'Oude Engelenseweg']\n",
     "for pump in pumps:\n",
     "    pump_flow = get_in_flow_approximation(pump)\n",
     "    pump_flow.to_csv(f\"../processed/pump_in_flow_appr_{pump}.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
